# ranortv-os

./: .gitignore  Makefile  README.md
buildroot/board/ranortv/rootfs_overlay/apps/netflix/: app.json  run.sh
buildroot/board/ranortv/rootfs_overlay/apps/plex/: app.json  run.sh
buildroot/board/ranortv/rootfs_overlay/apps/youtube/: app.json  run.sh
buildroot/board/ranortv/rootfs_overlay/etc/init.d/: S99ranortv
buildroot/board/ranortv/rootfs_overlay/etc/ranortv/: config.json
buildroot/board/ranortv/rootfs_overlay/etc/systemd/system/: ranortv.service
ci/docker/: buildroot.Dockerfile  dev.Dockerfile
launcher/: Cargo.toml  build.rs
launcher/src/: actions.rs  loader.rs  main.rs  models.rs  navigation.rs  ui.rs
launcher/ui/: AppWindow.slint  app_window.slint
launcher/ui/components/: app_grid.slint  app_item.slint  app_tile.slint  datetime_display.slint  featured_section.slint  settings_panel.slint  top_bar.slint
launcher/ui/styles/: mixins.slint  theme.slint
scripts/: setup-dev.sh
tools/app-store-server/: package-lock.json  package.json  server.js
