[package]
name = "media-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# Slint UI framework - much more robust than egui
slint = { version = "1.3", default-features = false, features = [
  "std",
  "renderer-gl",   # OpenGL renderer for hardware acceleration
  "accessibility", # For accessibility support
] }

# Minimal serde for app metadata
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

[build-dependencies]
slint-build = "1.3"

[profile.release]
# Optimize for size and performance
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Single codegen unit for better optimization
panic = "abort"   # Smaller panic handling
strip = true      # Strip debug symbols

# Reduce binary size further
[profile.release.package."*"]
opt-level = "z"

# Optional: completely static linking for musl
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
