[package]
name = "ranortv-launcher"
version = "0.1.0"
edition = "2021"
description = "Apple TV-style media launcher for RanorTV OS"
authors = ["RanorTV Team"]

[dependencies]
# Slint UI framework - using minimal backend to avoid X11 issues
slint = { version = "1.12", default-features = false, features = [
  "std",
  "backend-winit",
  "renderer-software", # Software renderer - no GPU/X11 dependencies
  "compat-1-2",
] }

# Serialization for app metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.12"

[profile.release]
# Optimize for size and performance in production
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Single codegen unit for better optimization
panic = "abort"   # Smaller panic handling
strip = true      # Strip debug symbols
