[package]
name = "ranortv-launcher"
version = "0.1.0"
edition = "2021"
description = "Apple TV-style media launcher for RanorTV OS"
authors = ["RanorTV Team"]

[dependencies]
# Slint UI framework - optimized for performance with GPU acceleration
slint = { version = "1.12", default-features = false, features = [
  "std",
  "backend-winit",
  "renderer-femtovg", # GPU-accelerated renderer instead of software
  # Alternative GPU options if femtovg doesn't work:
  # "renderer-skia",   # High-performance Skia renderer
  "compat-1-2",
] }

# Serialization for app metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.12"

# Development profile - optimize for faster compilation
[profile.dev]
opt-level = 1 # Basic optimization for better performance during development

[profile.release]
# Optimize for performance in production
opt-level = 3     # Maximum optimization for speed (not size)
lto = true        # Link-time optimization
codegen-units = 1 # Single codegen unit for better optimization
panic = "abort"   # Smaller panic handling
strip = true      # Strip debug symbols
